--- a/doc/latex/struct_material.tex
+++ b/doc/latex/struct_material.tex
@@ -55,7 +55,7 @@ int \hyperlink{struct_material_ad0964c5d437284a4dc9cfbe6e6dcafcc}{tex\+Count}
 \mbox{\Hypertarget{struct_material_ad0964c5d437284a4dc9cfbe6e6dcafcc}\label{struct_material_ad0964c5d437284a4dc9cfbe6e6dcafcc}} 
 \index{Material@{Material}!tex\+Count@{tex\+Count}}
 \index{tex\+Count@{tex\+Count}!Material@{Material}}
-\subsubsection{\texorpdfstring{tex\+Count}{texCount}}
+\subsubsection{\texorpdfstring{tex\+Count}{texcount}}
 {\footnotesize\ttfamily int Material\+::tex\+Count}
 
 
