fixed the side colliders

--- a/doc/latex/class_player.tex
+++ b/doc/latex/class_player.tex
@@ -188,7 +188,7 @@ Reimplemented from \hyperlink{class_dynamic_game_object_aaa505b57d131bbbce44d500
 \mbox{\Hypertarget{class_player_af7711712d6bd0b3185f8a38f769ff3c8}\label{class_player_af7711712d6bd0b3185f8a38f769ff3c8}} 
 \index{Player@{Player}!transition\+Jump\+Speed@{transition\+Jump\+Speed}}
 \index{transition\+Jump\+Speed@{transition\+Jump\+Speed}!Player@{Player}}
-\subsubsection{\texorpdfstring{transition\+Jump\+Speed}{transitionJumpSpeed}}
+\subsubsection{\texorpdfstring{transition\+Jump\+Speed}{transitionJumpTime}}
 {\footnotesize\ttfamily float Player\+::transition\+Jump\+Speed = 0\hspace{0.3cm}{\ttfamily [protected]}}
 
 \mbox{\Hypertarget{class_player_a6c51347e4c397febebd559c19d7969b9}\label{class_player_a6c51347e4c397febebd559c19d7969b9}} 
